# taberu-mate

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/docs/: auth-flow.md  menu-scan-api.md
backend/scripts/: test_llm_menu_scan_api.py
backend/src/taberu_mate_backend/: main.py
backend/src/taberu_mate_backend/api/: deps.py  router.py
backend/src/taberu_mate_backend/api/routes/: ai.py  health.py  menus.py  users.py
backend/src/taberu_mate_backend/core/: config.py  errors.py  rate_limit.py  security.py  security_events.py
backend/src/taberu_mate_backend/crud/: profiles.py  tokens.py  users.py
backend/src/taberu_mate_backend/db/: session.py
backend/src/taberu_mate_backend/models/: profile.py  token.py  user.py
backend/src/taberu_mate_backend/schemas/: ai.py  health.py  menu_scan.py  profile.py  user.py
backend/src/taberu_mate_backend/services/: ai.py
backend/tests/: test_ai.py  test_health.py  test_menu_scan.py  test_users.py
docs/: README.en.md  README.ja.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: App.spec.ts  OrdersView.spec.ts  setup.ts
frontend/src/assets/: main.css
frontend/src/router/: index.ts
frontend/src/services/: auth.ts  authSession.ts  http.ts  menuScan.ts  orderAssistant.ts  userProfile.ts
frontend/src/stores/: app.ts  auth.ts  menuScan.ts  userProfile.ts
frontend/src/views/: HomeView.vue  OrdersView.vue  PlaceholderView.vue  ProfileView.vue
