[project]
name = "taberu-mate-backend"
version = "0.1.0"
description = "This is back end of the TaberuMate Project."
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Ariakage", email = "ariakage233@gmail.com"}]
license = {text = "AGPL-3.0-or-only"}
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
    "ruff>=0.15.18",
    "mypy>=2.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM", "RUF"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
strict = true
